# AOC2024

./: .gitignore  CMakeLists.txt  NewDay.cmake  PackInputs.cmake  README.md  inputs.zip.gpg  main.cpp  solutions.cpp.in  solutions.h
.github/workflows/: test.yml
base/: CMakeLists.txt  DayCMakeListsTemplate.txt.in  base.cpp  base.h  board.h  dawg.cpp  dawg.h  day_template.cpp.in  day_template.h.in  hash.h  numbers.cpp  numbers.h  parsers.h  point.h  turtle.h
day.tmpl/: CMakeLists.txt.in  day_template.cpp.in
day01/: CMakeLists.txt  day01.cpp  day01.h  part1.cpp  part2.cpp
day02/: CMakeLists.txt  day02.cpp  day02.h
day03/: CMakeLists.txt  day03.cpp  day03.h
day04/: CMakeLists.txt  day04.cpp  day04.h
day05/: CMakeLists.txt  day05.cpp  day05.h
day06/: CMakeLists.txt  day06.cpp  day06.h
day07/: CMakeLists.txt  day07.cpp  day07.h
day08/: CMakeLists.txt  day08.cpp  day08.h
day09/: CMakeLists.txt  day09.cpp  day09.h
day10/: CMakeLists.txt  day10.cpp  day10.h
day11/: CMakeLists.txt  day11.cpp  day11.h
day12/: CMakeLists.txt  day12.cpp  day12.h
day13/: CMakeLists.txt  day13.cpp  day13.h
day14/: CMakeLists.txt  day14.cpp  day14.h
day15/: CMakeLists.txt  day15.cpp  day15.h  warehouse.cpp  warehouse.h
day16/: CMakeLists.txt  day16.cpp  day16.h
day17/: CMakeLists.txt  day17.cpp  day17.h
day18/: CMakeLists.txt  day18.cpp  day18.h
day19/: CMakeLists.txt  day19.cpp  day19.h
day20/: CMakeLists.txt  day20.cpp  day20.h
day21/: CMakeLists.txt  day21.cpp  day21.h
day22/: CMakeLists.txt  day22.cpp  day22.h
day23/: CMakeLists.txt  day23.cpp  day23.h
day24/: CMakeLists.txt  day24.cpp  day24.h
day25/: CMakeLists.txt  day25.cpp  day25.h
